# GameEngine

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
GameEngine/: Main.cpp
GameEngine/include/: Obstacle.h  RunWindow.h
GameEngine/include/Entity/: Entity.h  EntityManager.h
GameEngine/include/Physics/: IPhysicsObject.h  Obstacle.h  PhysicsCalculator.h
GameEngine/include/Renderer/: IRenderObject.h  RenderObject.h  Renderer.h
GameEngine/include/Utility/: ObjectUtility.h  Vector2D.h
GameEngine/src/: RunWindow.cpp
GameEngine/src/Entity/: Entity.cpp  EntityManager.cpp
GameEngine/src/Physics/: Obstacle.cpp  PhysicsCalculator.cpp
GameEngine/src/Renderer/: RenderObject.cpp  Renderer.cpp
GameEngine/src/Utility/: ObjectUtility.cpp  Vector2D.cpp
